# ar-rover5

./: .gitignore  7seg.cpp  7seg.h  README.md  ar-rover5.cpp  ar-rover5.files  ar-rover5.h  constants.h  encoders.cpp  encoders.h  motors.cpp  motors.h  sharpir.cpp
Examples/calibration/: CMakeLists.txt  calibration.cpp
Examples/motor-test/: CMakeLists.txt  motor-test.cpp
Examples/nunchuck/: CMakeLists.txt  nunchuck.cpp
android/rover5-control/: android_res.qrc  drivewidget.cpp  drivewidget.h  main.cpp  rover5-control.pro
android/rover5-control/android/: AndroidManifest.xml  build.xml  local.properties
android/rover5-control/android/res/values/: libs.xml  strings.xml
control-base/: mapscene.h  resources.qrc  rover5control.cpp  rover5control.h  scaledpixmapwidget.cpp  utils.cpp
foxg20/serialbridge/: main.cpp  serialbridge.cpp  serialbridge.h  serialbridge.pro  tcpserver.cpp  tcpserver.h
pc/rover5-control/: btinterface.cpp  btinterface.h  drivewidget.cpp  drivewidget.h  main.cpp  mapscene.cpp  mapscene.h  numstatwidget.cpp  numstatwidget.h  pc_res.qrc  resources.qrc  rover5-control.pro  rover5control.cpp  rover5control.h  scaledpixmapwidget.h  tcpclientinterface.cpp  tcpclientinterface.h  utils.cpp  utils.h
shared/: IRcontrol.h  shared.h  tcputils.cpp  tcputils.h
spider/librover5/: .gitignore  7seg.cpp  7seg.h  button.cpp  button.h  constants.h  encoders.cpp  encoders.h  librover5.cpp  librover5.files  librover5.h  librover5.includes  motors.cpp  motors.h  remoteinterface.cpp  remoteinterface.h  sharpir.cpp  sharpir.h  shiftregister.cpp  shiftregister.h  utils.h
spider/librover5/Examples/: re-cmake.sh
spider/librover5/Examples/IRcontrol/: CMakeLists.txt  IRcontrol.cpp
spider/librover5/Examples/LSMcalib/: CMakeLists.txt  LSMcalib.cpp
spider/librover5/Examples/beacontest/: CMakeLists.txt  beacontest.cpp
spider/librover5/Examples/calibration/: CMakeLists.txt  calibration.cpp
spider/librover5/Examples/motor-test/: CMakeLists.txt  motor-test.cpp
spider/librover5/Examples/nunchuck/: CMakeLists.txt  joy.ods  nunchuck.cpp  nunchuck_funcs.h
spider/librover5/Examples/odotest/: CMakeLists.txt  odotest.cpp
spider/librover5/Examples/wander/: CMakeLists.txt  robotai.cpp  robotai.h  wander.cpp
symbian/camclient/: .gitignore  bld.inf  camclient.cpp  camclient.desktop  camclient.h  camclient.pro  main.cpp  videosurface.cpp  videosurface.h
tiny/remote/: IRcontrol.h  remote.files  remote.ino
uno/twibtbridge/: CMakeLists.txt  ringbuffer.h  twibtbridge.cpp  twibtbridge.files
